# CookiecutterDS-NLP

./: README.md  setup.py
env/: pyvenv.cfg
iurista_IA/: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
iurista_IA.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
iurista_IA/docs/: mkdocs.yml
iurista_IA/docs/docs/: index.md
iurista_IA/iurista/: __init__.py  dataset.py  features.py  plots.py
iurista_IA/iurista/modeling/: predict.py  train.py
