[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "\u00e7iurista"
version = "0.0.1"
description = "Red Neuronal con ML y NLP para analisis contextual de jurisprudencia."
authors = [
  { name = "V\u00edctor Bravo" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["çiurista"]
force_sort_within_sections = true
